After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740776 - Symbolic icons are not rendered using the theme's foreground colour
Symbolic icons are not rendered using the theme's foreground colour
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
3.14.x
Other All
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-11-26 19:26 UTC by Debarshi Ray
Modified: 2014-12-07 17:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot of black icons (111.81 KB, image/png)
2014-11-26 19:26 UTC, Debarshi Ray
  Details
icon-helpers: Use the theme's foreground color to render the symbolics (2.17 KB, patch)
2014-11-26 19:36 UTC, Debarshi Ray
committed Details | Review
Screenshot (1) with 3.14 (111.95 KB, image/png)
2014-12-02 18:32 UTC, Debarshi Ray
  Details
Screenshot (2) with 3.14 (38.58 KB, image/png)
2014-12-02 18:33 UTC, Debarshi Ray
  Details
folders.png (9.40 KB, image/png)
2014-12-03 14:02 UTC, Bastien Nocera
  Details

Description Debarshi Ray 2014-11-26 19:26:24 UTC
Created attachment 291582 [details]
Screenshot of black icons

Some of totem's symbolic icons are rendered with black as the foreground colour. According to jimmac, the dark adwaita theme's foreground colour is light grey, and we should be using that.

(I am not sure why the foreground colour is white in gtk3-icon-browser, though.)
Comment 1 Debarshi Ray 2014-11-26 19:36:50 UTC
Created attachment 291584 [details] [review]
icon-helpers: Use the theme's foreground color to render the symbolics
Comment 2 Bastien Nocera 2014-12-01 15:45:59 UTC
That's nice, but there's still the problem of the size that's incorrect.
Comment 3 Debarshi Ray 2014-12-02 18:32:35 UTC
Created attachment 292014 [details]
Screenshot (1) with 3.14
Comment 4 Debarshi Ray 2014-12-02 18:33:58 UTC
Created attachment 292015 [details]
Screenshot (2) with 3.14
Comment 5 Bastien Nocera 2014-12-03 14:02:49 UTC
Created attachment 292069 [details]
folders.png

This is what it looks like in 3.14, using Fedora's packages for me:
totem-3.14.0-1.fc21.x86_64
gnome-icon-theme-symbolic-3.12.0-2.fc21.noarch
adwaita-icon-theme-3.14.1-1.fc21.noarch
gnome-icon-theme-3.12.0-2.fc21.noarch
Comment 6 Bastien Nocera 2014-12-07 17:10:24 UTC
Attachment 291584 [details] pushed as fd9b1d9 - icon-helpers: Use the theme's foreground color to render the symbolics