icon-helpers: Use the theme's foreground color to render the symbolics

https://bugzilla.gnome.org/show_bug.cgi?id=740776